--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Просмотр камеры -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="0dp"
@@ -18,7 +17,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:scaleType="fillCenter" />
 
-    <!-- Наложение изображения -->
     <ImageView
         android:id="@+id/overlayImageView"
         android:layout_width="0dp"
@@ -31,7 +29,6 @@
         android:visibility="gone"
         android:contentDescription="@string/overlay_image_description" />
 
-    <!-- Основной чекбокс видимости элементов управления -->
     <CheckBox
         android:id="@+id/controlsVisibilityCheckbox"
         android:layout_width="wrap_content"
@@ -48,7 +45,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Чекбокс для показа кнопки "Слои", когда контролы скрыты -->
     <CheckBox
         android:id="@+id/showLayersWhenControlsHiddenCheckbox"
         android:layout_width="wrap_content"
@@ -65,7 +61,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/controlsVisibilityCheckbox" />
 
-    <!-- Группа для управления видимостью основных контролов -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
@@ -77,7 +72,6 @@
             linkZoomSwitch,zoom_slider,transparency_slider"
         android:visibility="visible" />
 
-    <!-- Кнопка Загрузить -->
     <Button
         android:id="@+id/load_image_button"
         android:layout_width="wrap_content"
@@ -88,7 +82,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Переключатель Карандаш -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/pencilModeSwitch"
         android:layout_width="wrap_content"
@@ -104,7 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
-    <!-- ЧЕКБОКС ДЛЯ ЗЕЛЕНОГО РЕЖИМА -->
     <CheckBox
         android:id="@+id/greenModeCheckbox"
         android:layout_width="wrap_content"
@@ -122,8 +114,6 @@
         app:layout_constraintTop_toTopOf="@id/pencilModeSwitch"
         app:layout_constraintBottom_toBottomOf="@id/pencilModeSwitch"/>
 
-
-    <!-- Кнопка Слои -->
      <Button
         android:id="@+id/layerSelectButton"
         android:layout_width="wrap_content"
@@ -135,7 +125,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
-    <!-- Кнопка Сохранить Параметры -->
     <Button
         android:id="@+id/saveParamsButton"
         style="?android:attr/buttonBarButtonStyle"
@@ -151,7 +140,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layerSelectButton"/>
 
-    <!-- Кнопка Загрузить Параметры -->
     <Button
         android:id="@+id/loadParamsButton"
         style="?android:attr/buttonBarButtonStyle"
@@ -167,7 +155,6 @@
         app:layout_constraintTop_toTopOf="@id/saveParamsButton"
         app:layout_constraintBottom_toBottomOf="@id/saveParamsButton"/>
 
-    <!-- Слайдер прозрачности (внизу экрана) -->
     <com.google.android.material.slider.Slider
         android:id="@+id/transparency_slider"
         android:layout_width="0dp"
@@ -185,7 +172,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Слайдер зума (над слайдером прозрачности) -->
     <com.google.android.material.slider.Slider
         android:id="@+id/zoom_slider"
         android:layout_width="0dp"
@@ -201,7 +187,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Переключатель Связать зум (над слайдером зума) -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/linkZoomSwitch"
         android:layout_width="wrap_content"
@@ -218,7 +203,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/zoom_slider" />
 
-    <!-- Переключатель ручного редактирования (над блоком ручного управления) -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/manualTransformSwitch"
         android:layout_width="wrap_content"
@@ -235,8 +219,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/zoom_slider"/>
 
-
-    <!-- Элементы управления ручным редактированием -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/manualTransformControlsLayout"
         android:layout_width="wrap_content"
@@ -249,7 +231,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/manualTransformSwitch">
 
-        <!-- Строка 1: Кнопки перемещения -->
         <Button
             android:id="@+id/buttonMoveLeft"
             style="?android:attr/buttonBarButtonStyle"
@@ -294,8 +275,6 @@
             app:layout_constraintTop_toTopOf="@id/buttonMoveUp"
             android:layout_marginStart="4dp"/>
 
-
-        <!-- Строка 2: Кнопки вращения и сброс -->
         <Button
             android:id="@+id/buttonRotateCCW"
             style="?android:attr/buttonBarButtonStyle"
@@ -329,7 +308,6 @@
             app:layout_constraintTop_toTopOf="@id/buttonResetTransform"
             android:layout_marginStart="4dp"/>
 
-        <!-- >>> СТРОКА 3: Кнопки масштабирования <<< -->
         <Button
             android:id="@+id/buttonScaleDown"
             style="?android:attr/buttonBarButtonStyle"
@@ -338,7 +316,7 @@
             android:text="-"
             android:textSize="20sp"
             android:padding="0dp"
-            app:layout_constraintTop_toBottomOf="@id/buttonRotateCCW" <!-- Под кнопками вращения -->
+            app:layout_constraintTop_toBottomOf="@id/buttonRotateCCW"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"/>
 
@@ -353,7 +331,7 @@
             app:layout_constraintStart_toEndOf="@id/buttonScaleDown"
             app:layout_constraintTop_toTopOf="@id/buttonScaleDown"
             android:layout_marginStart="4dp"/>
-        <!-- Кнопка сброса масштаба (опционально, но полезно) -->
+
         <Button
             android:id="@+id/buttonResetScale"
             style="?android:attr/buttonBarButtonStyle"
@@ -366,8 +344,6 @@
             app:layout_constraintTop_toTopOf="@id/buttonScaleUp"
             android:layout_marginStart="4dp"/>
 
-
-        <!-- Строка 4: Поле ввода шага -->
         <EditText
             android:id="@+id/editTextTransformStep"
             android:layout_width="0dp"
@@ -381,7 +357,7 @@
             android:backgroundTint="@android:color/white"
             android:textSize="14sp"
             android:imeOptions="actionDone"
-            app:layout_constraintTop_toBottomOf="@id/buttonScaleDown" <!-- Под кнопками масштабирования -->
+            app:layout_constraintTop_toBottomOf="@id/buttonScaleDown"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
